# uniffi-demo

./: README.md
apps/android/: Makefile  build-and-run.sh  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/harmony/: oh-package-lock.json5  oh-package.json5
apps/harmony/AppScope/: app.json5
apps/harmony/AppScope/resources/base/element/: string.json
apps/harmony/entry/: oh-package-lock.json5  oh-package.json5
apps/harmony/entry/libs/rust_lib/: index.d.ts  oh-package.json5
apps/harmony/entry/src/main/cpp/: CMakeLists.txt
apps/ios/UniffiTest/Framworks/rust_lib_framework.xcframework/: Info.plist
apps/ios/UniffiTest/UniffiTest/: ContentView.swift  UniffiTestApp.swift
apps/ios/UniffiTest/UniffiTest.xcodeproj/: project.pbxproj
apps/ios/UniffiTest/UniffiTestTests/: UniffiTestTests.swift
apps/ios/UniffiTest/UniffiTestUITests/: UniffiTestUITests.swift  UniffiTestUITestsLaunchTests.swift
rust_lib/: .gitignore  Cargo.toml  README.md
rust_lib/.cargo/: config.toml
rust_lib/scripts/: batch-build.sh  build-android.sh  build-framework.sh  build-harmony.sh  build-ios-framework.sh  build-ios.sh  generate-bindings-android-debug.sh  generate-bindings-android.sh  generate-bindings-ios.sh
rust_lib/src/: common.rs  error.rs  init.rs  lib.rs
rust_lib/src/log/: mod.rs
rust_lib/src/napi_rs/: init.rs  js_callback.rs  mod.rs
rust_lib/src/uniffi_rs/: error.rs  init.rs  mod.rs
(+15 files in other folders)
